--- a/html/index.html
+++ b/html/index.html
@@ -41,7 +41,7 @@ working. Further configuration may be required.</p>
 <p>For online documentation and support please refer to
 <a href="http://nginx.org/">nginx.org</a>,
     <a href="http://openresty.org/">openresty.org</a>,
-    <a href="https://github.com/nbs-system/naxsi/wiki">Naxsi</a>.<br/>
+    <a href="https://signalsciences.com">Signal Sciences</a>.<br/>
 
 </body>
 </html>
